first step to cleaning up html/css

--- a/depictions/com.cj81499.BarelyRounded/screenshots.html
+++ b/depictions/com.cj81499.BarelyRounded/screenshots.html
@@ -11,21 +11,17 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <label>Screenshots</label>
-    <fieldset>
+<body>
+  <div class="panel">
+    <div class="section-label">Screenshots</div>
+    <div class="fieldset">
       <div>
         <center>
-
           <img src="./screenshots/1.png" width="100%">
-
         </center>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
