--- a/depictions/com.cj81499.PebbleStatus.Time/changelog.html
+++ b/depictions/com.cj81499.PebbleStatus.Time/changelog.html
@@ -11,42 +11,36 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>PebbleStatus Time Changelog</p>
-    </block>
-
-    <label>Version 0.4 (11/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 0.4 (11/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Size Optimizations</p>
       </div>
-    </fieldset>
-
-    <label>Version 0.3 (10/29/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 0.3 (10/29/15)</div>
+    <div class="fieldset">
       <div>
         <p>New Depiction</p>
       </div>
-    </fieldset>
-
-    <label>Version 0.2 (??/??/??)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 0.2 (??/??/??)</div>
+    <div class="fieldset">
       <div>
         <p>Fix Something</p>
       </div>
-    </fieldset>
-
-    <label>Version 0.1 (9/24/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 0.1 (9/24/15)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
