--- a/depictions/com.cj81499.cjLoader/screenshots.html
+++ b/depictions/com.cj81499.cjLoader/screenshots.html
@@ -8,11 +8,10 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <label>Screenshots</label>
-    <fieldset>
+<body>
+  <div class="panel">
+    <div class="section-label">Screenshots</div>
+    <div class="fieldset">
       <div>
         <center>
           <img src="./screenshots/1.gif">
@@ -21,9 +20,8 @@
           <img src="./screenshots/2.gif">
         </center>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
