--- a/depictions/com.cj81499.cjMandolino/screenshots.html
+++ b/depictions/com.cj81499.cjMandolino/screenshots.html
@@ -11,28 +11,23 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <label>Screenshots</label>
-    <fieldset>
+<body>
+  <div class="panel">
+    <div class="section-label">Screenshots</div>
+    <div class="fieldset">
       <div>
         <center>
-
           <img src="./screenshots/1.png" width="100%">
           <p style="font-family: HelveticaNeue">Screenshot from
             <a href="https://www.reddit.com/r/iOSthemes/comments/3o4ww7/setup_mandolino_ocean/cvud2w7" target="_new">here</a>. Setup by
             <a href="https://www.reddit.com/user/ReadyBasher01" target="_new">/u/ReadyBasher01</a>.</p>
-
           <br>
           <br>
           <img src="./screenshots/2.png" width="100%">
-
         </center>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
