--- a/depictions/com.cj81499.cjOdin/changelog.html
+++ b/depictions/com.cj81499.cjOdin/changelog.html
@@ -11,35 +11,30 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>cjOdin Changelog</p>
-    </block>
-
-    <label>Version 1.2 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.2 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.1 (11/22/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.1 (11/22/15)</div>
+    <div class="fieldset">
       <div>
         <p>Add Info.plist</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.0 (11/22/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.0 (11/22/15)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
