--- a/depictions/com.highdetalio.SpaceBlueBerry/changelog.html
+++ b/depictions/com.highdetalio.SpaceBlueBerry/changelog.html
@@ -11,78 +11,67 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>SpaceBlueBerry Changelog</p>
-    </block>
-
-    <label>Version 1.8 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.8 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.7 (12/28/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.7 (12/28/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Winterboard Clock Fixes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.6 (11/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.6 (11/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Size Optimizations</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.5 (10/31/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.5 (10/31/15)</div>
+    <div class="fieldset">
       <div>
         <p>Activator Fix (Anemone only because Winterboard can't theme Activator)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.4 (10/29/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.4 (10/29/15)</div>
+    <div class="fieldset">
       <div>
         <p>New Depiction</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.3 (9/28/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.3 (9/28/15)</div>
+    <div class="fieldset">
       <div>
         <p>Deb "Depends line" changes</p>
         <p>Depiction Update</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.2 (9/25/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.2 (9/25/15)</div>
+    <div class="fieldset">
       <div>
         <p>Winterboard Clock Fixes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.1 (9/23/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.1 (9/23/15)</div>
+    <div class="fieldset">
       <div>
         <p>Winterboard Support</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.0 (9/20/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.0 (9/20/15)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
