--- a/depictions/com.cj81499.BarelyRounded/changelog.html
+++ b/depictions/com.cj81499.BarelyRounded/changelog.html
@@ -11,58 +11,50 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>BarelyRounded Changelog</p>
-    </block>
-
-    <label>Version 1.5 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.5 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Docks (iPhone 6 only for now. Untested.)</p>
         <p>Removed useless psd files.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.4 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.4 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.3 (11/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.3 (11/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Size Optimizations</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.2 (10/26/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.2 (10/26/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Depiction Fix</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.1 (10/26/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.1 (10/26/2015)</div>
+    <div class="fieldset">
       <div>
         <p>New Depiction</p>
         <p>Anemone Folder Masking Changes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.0 (10/12/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.0 (10/12/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
