--- a/depictions/com.cj81499.BarelyRounded/index.html
+++ b/depictions/com.cj81499.BarelyRounded/index.html
@@ -11,81 +11,62 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <label>Info</label>
-    <fieldset>
+<body>
+  <div class="panel">
+    <div class="section-label">Info</div>
+    <div class="fieldset">
       <div>
         <p>Icon mask and shadow requested on reddit
-          <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/"
-            target="new">here</a>.</p>
+          <a href="https://www.reddit.com/r/iOSthemes/comments/3nrehu/question_can_somebody_make_this_android_type_icon/" target="new">here</a>.</p>
       </div>
-      <a href="./screenshots.html">
+      <a class="black-text" href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Screenshots</p>
-            </label>
+            <p>Screenshots</p>
           </div>
         </div>
       </a>
-    </fieldset>
-
-    <label>Changelog</label>
-    <fieldset>
-      <a href="./changelog.html">
+    </div>
+    <div class="section-label">Changelog</div>
+    <div class="fieldset">
+      <a class="black-text" href="./changelog.html">
         <img class="icon" src="../resources/icons/changelog.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Changelog</p>
-            </label>
+            <p>Changelog</p>
           </div>
         </div>
       </a>
-    </fieldset>
-
-    <label>Other</label>
-    <fieldset>
-
-      <a href="/depictions/resources/help.html">
+    </div>
+    <div class="section-label">Other</div>
+    <div class="fieldset">
+      <a class="black-text" href="/depictions/resources/help.html">
         <img class="icon" src="../resources/icons/help.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Help</p>
-            </label>
+            <p>Help</p>
           </div>
         </div>
       </a>
-
-      <a href="/depictions/resources/donate.html">
+      <a class="black-text" href="/depictions/resources/donate.html">
         <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Donate</p>
-            </label>
+            <p>Donate</p>
           </div>
         </div>
       </a>
-
-      <a href="/depictions/resources/contact.html">
+      <a class="black-text" href="/depictions/resources/contact.html">
         <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Contact Me</p>
-            </label>
+            <p>Contact Me</p>
           </div>
         </div>
       </a>
-
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
 </body>
 
