--- a/depictions/com.cj81499.cjGlyphs/changelog.html
+++ b/depictions/com.cj81499.cjGlyphs/changelog.html
@@ -11,15 +11,13 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>cjGlyphs Changelog</p>
-    </block>
-
-    <label>Version 1.48 (4/15/2017)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.48 (4/15/2017)</div>
+    <div class="fieldset">
       <div>
         <p>It's been a while. I hope the larger than normal number of icons somewhat makes up for that.</p>
         <p>Added Settings Theme! (Super early version. Needs revision)</p>
@@ -27,201 +25,177 @@
           Narwhal, Vainglory, Tunnelbear</p>
         <p>Updated Netflix</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.47 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.47 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.46 (8/17/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.46 (8/17/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Cut the Rope, Piano Tiles, Photoshop Mobile, Psych, Quizlet, Quizup, Road Trip 2, Union</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.45 (8/11/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.45 (8/11/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Paper by 53, Enlight, Pokemon GO, Snapseed</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.44 (6/6/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.44 (6/6/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Reddit, Dexter, Dolphin, Teal, New Scientist</p>
         <p>Updated Apple Watch</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.43 (4/6/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.43 (4/6/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Game 4 2, Fussball.de, Kicktipp, Flashscore, Multi-Year Weight Training, Quizduell, Spiegel Online, Spox, Comdirect
           Banking
         </p>
-        <p>Updated Clash Royale, iCleaner Pro, Passbook/Wallet (I was wrong about being happy. I think I am now though.)</p>
+        <p>Updated Clash Royale, iCleaner Pro, Passbook/Wallet (I was wrong about being happy. I think I am now though.)
+        </p>
       </div>
-    </fieldset>
-
-    <label>Version 1.42 (3/19/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.42 (3/19/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Desmos, Discord, Plague Inc, Clash Royale, Puzzle Forge II</p>
         <p>Updated AfterLight, Spark</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.41 (3/6/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.41 (3/6/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Tinder ;)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.40 (3/6/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.40 (3/6/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added TestFlight</p>
         <p>Updated Passbook/Wallet (I'm finally happy with its icon. This one is here to stay.)</p>
         <p>Fixed Info.plist issues</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.39 (2/24/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.39 (2/24/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added BiteSMS, Boom Beach, Submarine</p>
         <p>Updated Uber, Tips</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.38 (1/31/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.38 (1/31/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Updated Clock</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.37 (1/28/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.37 (1/28/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added ESPN, Hulu, Bank Of America, Xbox SmartGlass, Minecraft PE, Quick Books, Zenonia S, Sword of Chaos</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.36 (1/10/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.36 (1/10/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Calendars by Readdle, Rhapsody, Star Wars: Commander, Practice+, Twitterrific, Mathletics Student, Creepy Pasta
           Wiki, Puffin Browser, Agape</p>
         <p>Updated Tweetbot</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.35 (12/26/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.35 (12/26/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Added Black Version (I haven't tested this much. Please report any issues.)</p>
         <p>Added 19 new icons: AntRec, Terminal, Appster, JW Library, CloudBeats, Chunky Comic Reader, PDF Expert 5, Bundlr,
           MovieBox, Alto's Adventure, Screenshot Maker Pro, Glit, CVS Pharmacy, USAA, Venmo, Citi, Line, Viber, Camfrog</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.34 (12/19/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.34 (12/19/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Added OnePassword, Google Calendar, Spark Email, Comet, Yelp</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.33 (12/12/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.33 (12/12/2015)</div>
+    <div class="fieldset">
       <div>
-        <p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Infuse, PicsPlay</p>
+        <p>Added AppDrawer, Outlook, OneDrive, OneNote, GarageBand, Keynote, Steam, Flow, Infuse, PicsPlay
+        </p>
       </div>
-    </fieldset>
-
-    <label>Version 1.32 (11/17/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.32 (11/17/2015)</div>
+    <div class="fieldset">
       <div>
         <p>WB Calendar Fix</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.31 (11/14/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.31 (11/14/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Added Geekbench, XE Currency, Khan Academy</p>
         <p>WB Clock Fix</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.30 (11/13/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.30 (11/13/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Added Filza, iStudent App, Wikipedia</p>
         <p>Depiction Changes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.29 (11/12/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.29 (11/12/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Updated OpenTable, News</p>
         <p>Added Swagbucks, Skype, Apple Store</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.28 (11/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.28 (11/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Size Optimizations</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.27 (10/31/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.27 (10/31/15)</div>
+    <div class="fieldset">
       <div>
         <p>Massive Size Reduction (Removed Image Metadata)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.26 (10/31/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.26 (10/31/15)</div>
+    <div class="fieldset">
       <div>
         <p>Activator Fix (Anemone only because Winterboard can't theme Activator)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.25 (10/29/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.25 (10/29/15)</div>
+    <div class="fieldset">
       <div>
         <p>New Depiction</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.24 (10/17/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.24 (10/17/15)</div>
+    <div class="fieldset">
       <div>
         <p>Add iOS 9 Icons (News, Passbook/Wallet, iCloud Drive)</p>
       </div>
-    </fieldset>
-
-    <label>Versions 1.0 - 1.23 (1/2/15 - 10/17/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Versions 1.0 - 1.23 (1/2/15 - 10/17/15)</div>
+    <div class="fieldset">
       <div>
         <p>
           <a href="https://docs.google.com/document/d/1a9sFh57R0qCcLWptkqTExtX5jUo5bKrnTuuIwjSAhdA">Older Changes</a>
         </p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
