--- a/depictions/com.highdetalio.SpaceBlueBerry/screenshots.html
+++ b/depictions/com.highdetalio.SpaceBlueBerry/screenshots.html
@@ -11,28 +11,23 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <label>Screenshots</label>
-    <fieldset>
+<body>
+  <div class="panel">
+    <div class="section-label">Screenshots</div>
+    <div class="fieldset">
       <div>
         <center>
-
           <img src="./screenshots/1.jpg" width="100%">
           <p style="font-family: HelveticaNeue">Screenshot from
             <a href="https://www.reddit.com/r/iOSthemes/comments/3mesar/setup_buenas_noches/cvud0jc" target="_new">here</a>. Setup by
             <a href="https://www.reddit.com/user/misairr" target="_new">/u/misairr</a>.</p>
-
           <br>
           <br>
           <img src="./screenshots/2.jpg" width="100%">
-
         </center>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
