--- a/depictions/com.jacopoiuytr.Mandolino/changelog.html
+++ b/depictions/com.jacopoiuytr.Mandolino/changelog.html
@@ -11,56 +11,48 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>Mandolino Changelog</p>
-    </block>
-
-    <label>Version 1.5 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.5 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.4 (12/28/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.4 (12/28/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Winterboard Clock Fixes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.3 (11/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.3 (11/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Size Optimizations</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.2 (10/31/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.2 (10/31/15)</div>
+    <div class="fieldset">
       <div>
         <p>Activator Fix (Anemone only because Winterboard can't theme Activator)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.1 (10/29/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.1 (10/29/15)</div>
+    <div class="fieldset">
       <div>
         <p>New Depiction</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.0 (10/7/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.0 (10/7/15)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
