--- a/depictions/com.tokems.Glyphs/changelog.html
+++ b/depictions/com.tokems.Glyphs/changelog.html
@@ -11,197 +11,170 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
+<body>
+  <div class="panel">
+    <div id="block-title">
       <p>Glyphs Changelog</p>
-    </block>
-
-    <label>Version 1.27 (4/15/2017)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.27 (4/15/2017)</div>
+    <div class="fieldset">
       <div>
         <p>Wallpaper</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.26 (9/2/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.26 (9/2/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Update Hide Icon Labels</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.25 (8/22/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.25 (8/22/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Dependency changes. Should default to Anemone instead of Winterboard now.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.24 (6/17/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.24 (6/17/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Fix .DS_Store issue(?)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.23 (6/17/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.23 (6/17/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Added Hide Icon Labels (Anemone Only)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.22 (3/17/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.22 (3/17/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Updated iCleaner Pro</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.21 (2/23/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.21 (2/23/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Fixed some compatibility issues with older iOS versions</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.20 (1/31/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.20 (1/31/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Changed Clock</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.19 (1/9/2016)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.19 (1/9/2016)</div>
+    <div class="fieldset">
       <div>
         <p>Respring Logo is now it's own theme</p>
         <p>Size Optimizations (I forgot to optimize black version last time)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.18 (12/26/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.18 (12/26/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Added Black Version (I haven't tested this much. Please report any issues.)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.17 (12/19/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.17 (12/19/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Tweetbot 4 Icon</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.16 (12/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.16 (12/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Allow installation on any iOS version</p>
         <p>Please report bugs</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.15 (11/17/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.15 (11/17/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Winterboard Clock Fix</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.14 (11/1/2015)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.14 (11/1/2015)</div>
+    <div class="fieldset">
       <div>
         <p>Size Optimizations</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.13 (10/31/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.13 (10/31/15)</div>
+    <div class="fieldset">
       <div>
         <p>Activator Fix (Anemone only. Winterboard can't theme Activator)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.12 (10/29/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.12 (10/29/15)</div>
+    <div class="fieldset">
       <div>
         <p>I'm not quite sure, but I know I changed something.</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.11 (10/27/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.11 (10/27/15)</div>
+    <div class="fieldset">
       <div>
         <p>New Depiction</p>
         <p>Added Polus CC Theme</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.10 (10/6/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.10 (10/6/15)</div>
+    <div class="fieldset">
       <div>
         <p>Fix Respring Logo for White Devices</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.9 (9/28/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.9 (9/28/15)</div>
+    <div class="fieldset">
       <div>
         <p>Deb "Depends" line changes</p>
         <p>Depiction update</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.8 (9/25/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.8 (9/25/15)</div>
+    <div class="fieldset">
       <div>
         <p>Winterboard Clock fixes (Requires
           <a href="http://cydia.saurik.com/package/com.bensge.customclockicon/" target="_new">Custom Clock Icon</a>)</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.7 (9/23/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.7 (9/23/15)</div>
+    <div class="fieldset">
       <div>
         <p>I Forgot to Make a Changlog</p>
         <p>Probably Mostly Icon Fixes</p>
         <p>*Shrugs*</p>
         <p>Winterboard Support</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.3 (8/22/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.3 (8/22/15)</div>
+    <div class="fieldset">
       <div>
         <p>Icon and Badge Fixes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.2 (8/21/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.2 (8/21/15)</div>
+    <div class="fieldset">
       <div>
         <p>Added Control Center Theme</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.1 (8/20/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.1 (8/20/15)</div>
+    <div class="fieldset">
       <div>
         <p>Icon Fixes</p>
       </div>
-    </fieldset>
-
-    <label>Version 1.0 (8/19/15)</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Version 1.0 (8/19/15)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
 
 </html>
