--- a/depictions/com.tokems.Glyphs/index.html
+++ b/depictions/com.tokems.Glyphs/index.html
@@ -11,11 +11,10 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <label>Info</label>
-    <fieldset>
+<body>
+  <div class="panel">
+    <div class="section-label">Info</div>
+    <div class="fieldset">
       <div>
         <p>This theme was made by tokems (
           <a href="http://tokemsaurus.tumblr.com" target="_new">Blog</a> -
@@ -26,71 +25,54 @@
         <p>A wallpaper for iPhone 5 or iPhone 6 is available at "Library/Themes/Glyphs - iOS 8.theme/Wallpaper".</p>
         <p>Contains a Polus compatible CC theme.</p>
       </div>
-      <a href="./screenshots.html">
+      <a class="black-text" href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Screenshots</p>
-            </label>
+            <p>Screenshots</p>
           </div>
         </div>
       </a>
-    </fieldset>
-
-    <label>Changelog</label>
-    <fieldset>
-      <a href="./changelog.html">
+    </div>
+    <div class="section-label">Changelog</div>
+    <div class="fieldset">
+      <a class="black-text" href="./changelog.html">
         <img class="icon" src="../resources/icons/changelog.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Changelog</p>
-            </label>
+            <p>Changelog</p>
           </div>
         </div>
       </a>
-    </fieldset>
-
-    <label>Other</label>
-    <fieldset>
-
-      <a href="/depictions/resources/help.html">
+    </div>
+    <div class="section-label">Other</div>
+    <div class="fieldset">
+      <a class="black-text" href="/depictions/resources/help.html">
         <img class="icon" src="../resources/icons/help.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Help</p>
-            </label>
+            <p>Help</p>
           </div>
         </div>
       </a>
-
-      <a href="/depictions/resources/donate.html">
+      <a class="black-text" href="/depictions/resources/donate.html">
         <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Donate</p>
-            </label>
+            <p>Donate</p>
           </div>
         </div>
       </a>
-
-      <a href="/depictions/resources/contact.html">
+      <a class="black-text" href="/depictions/resources/contact.html">
         <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Contact Me</p>
-            </label>
+            <p>Contact Me</p>
           </div>
         </div>
       </a>
-
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
 </body>
 
