--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>cj81499's Repo</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="./depictions/resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="./depictions/resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="./depictions/resources/js/thankssaurik.js"></script>
@@ -14,56 +15,46 @@
   <link rel="icon" type="image/png" href="/depictions/resources/logo/64.png" sizes="64x64">
   <link rel="icon" type="image/png" href="/depictions/resources/logo/128.png" sizes="128x128">
   <link rel="icon" type="image/png" href="/depictions/resources/logo/256.png" sizes="256x256">
-  <link rel="apple-touch-icon" sizes="120x120" href="/depictions/resources/logo/120.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/depictions/resources/logo/iOS_120.png">
 </head>
 
-<body class="pinstripe">
-  <panel>
-
-    <block>
-      <fieldset>
-        <label>
-          <strong>Welcome to cj81499's Cydia Repo!</strong>
-        </label>
-      </fieldset>
-    </block>
-
-    <label>Do Things</label>
-    <fieldset>
-      <a href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io">
+<body>
+  <div class="panel">
+    <div id="block-title">
+      <p>
+        <b>Welcome to cj81499's Cydia Repo!</b>
+      </p>
+    </div>
+    <div class="section-label">Do Things</div>
+    <div class="fieldset">
+      <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io">
         <img class="icon" src="./depictions/resources/icons/cydia.png">
         <div>
           <div>
-            <label>
-              <p>Add to Cydia</p>
-            </label>
+            <p>Add to Cydia</p>
           </div>
         </div>
       </a>
-      <a>
+      <a class="black-text">
         <img class="icon" src="./depictions/resources/icons/url.png">
         <div>
-          <div>
-            <label>
-              <p>URL</p>
-            </label>
-            <input type="text" value="https://cj81499.github.io" onclick="setSelectionRange(0,25)" style="width: 210px;">
+          <div id="repo-url">
+            <p>URL</p>
+            <input type="text" value="https://cj81499.github.io" onclick="this.setSelectionRange(0, this.value.length);" readonly>
           </div>
         </div>
       </a>
-    </fieldset>
-
-    <label>Thanks</label>
-    <fieldset>
+    </div>
+    <div class="section-label">Thanks</div>
+    <div class="fieldset">
       <div>
         <div>
-          <label>
-            <p><a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Thanks!</p>
-          </label>
+          <p>
+            <a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Thanks!</p>
         </div>
       </div>
-    </fieldset>
-
-  </panel>
+    </div>
+  </div>
 </body>
+
 </html>
