--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
 <body>
   <div class="panel">
     <div id="block-title">
-      <p>
-        <b>Welcome to cj81499's Cydia Repo!</b>
-      </p>
+      <p>Welcome to cj81499's Cydia Repo!</p>
     </div>
     <div class="section-label">Do Things</div>
     <div class="fieldset">
