we be redesigning

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>cj Home</title>
+    <title>cj Contact</title>
 
     <!-- Stylesheets -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
@@ -27,7 +27,7 @@
     <meta name="theme-color" content="#3498db">
 </head>
 
-<body id="home-page">
+<body id="contact-page">
     <section class="hero is-dark is-small">
         <div class="hero-head">
             <nav class="navbar">
@@ -69,11 +69,8 @@
         <div class="hero-body">
             <div class="container ">
                 <h1 class="title ">
-                    cj's Website
+                    Contact Me
                 </h1>
-                <!-- <p class="subtitle ">
-                    https://cj81499.github.io
-                </p> -->
             </div>
         </div>
     </section>
@@ -84,11 +81,11 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Welcome!
+                                Email
                             </div>
                         </div>
                         <div class="card-content">
-                            idk what to say
+                            <a href="mailto:cjMakesIcons@gmail.com">cjMakesIcons@gmail.com</a>
                         </div>
                     </div>
                 </div>
@@ -96,12 +93,11 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Repo
+                                Reddit
                             </div>
                         </div>
                         <div class="card-content">
-                            moved to
-                            <a href="/repo/">here</a>.
+                            <a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a>
                         </div>
                     </div>
                 </div>
@@ -109,11 +105,11 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Hi
+                                Twitter
                             </div>
                         </div>
                         <div class="card-content">
-                            Text
+                            <a href="https://twitter.com/cjMakesIcons">cjMakesIcons</a>
                         </div>
                     </div>
                 </div>
