--- a/repo/depictions/com.cj81499.cjGlyphs/screenshots.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/screenshots.html
@@ -24,7 +24,7 @@
           <br>
           <img src="./screenshots/1.png" width="100%">
           <p>
-            <a href="http://cj81499.github.io/resources/contact" target="_blank">cj81499</a> - Personal Setup
+            <a href="/contact.html" target="_blank">cj81499</a> - Personal Setup
           </p>
           <br>
           <img src="./screenshots/2.png" width="100%">
