--- a/repo/help.html
+++ b/repo/help.html
@@ -54,7 +54,7 @@
     <div class="fieldset">
       <div>
         <p>
-          <a href="https://cj81499.github.io/depictions/contact.html" target="_new">Contact Me</a>
+          <a href="/contact.html" target="_new">Contact Me</a>
         </p>
       </div>
     </div>
