--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -69,7 +69,7 @@
           </div>
         </div>
       </a>
-      <a class="black-text" href="/repo/contact.html">
+      <a class="black-text" href="/contact.html">
         <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
         <div>
           <div>
