--- a/repo/index.html
+++ b/repo/index.html
@@ -2,56 +2,64 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8">
-  <title>cj81499's Repo</title>
-  <base target="_top">
-  <link rel="stylesheet" type="text/css" href="/repo/css/style.css" />
-  <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="format-detection" content="telephone=no">
-  <link rel="icon" type="image/png" href="/resources/logo/16.png" sizes="16x16">
-  <link rel="icon" type="image/png" href="/resources/logo/32.png" sizes="32x32">
-  <link rel="icon" type="image/png" href="/resources/logo/48.png" sizes="48x48">
-  <link rel="icon" type="image/png" href="/resources/logo/64.png" sizes="64x64">
-  <link rel="icon" type="image/png" href="/resources/logo/128.png" sizes="128x128">
-  <link rel="icon" type="image/png" href="/resources/logo/256.png" sizes="256x256">
-  <link rel="apple-touch-icon" sizes="120x120" href="/resources/logo/iOS_120.png">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>cj Repo</title>
+    <base target="_top">
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" type="text/css" href="/repo/css/style.css">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/resources/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/resources/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/resources/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/resources/favicon/safari-pinned-tab.svg" color="#3498db">
+    <link rel="shortcut icon" href="/resources/favicon/favicon.ico">
+    <meta name="apple-mobile-web-app-title" content="cj's Website">
+    <meta name="application-name" content="cj's Website">
+    <meta name="msapplication-TileColor" content="#3498db">
+    <meta name="msapplication-config" content="/resources/favicon/browserconfig.xml">
+    <meta name="theme-color" content="#3498db">
 </head>
 
 <body>
-  <div class="panel">
-    <div id="block-title">
-      <p>Welcome to cj81499's Cydia Repo!</p>
-    </div>
-    <div class="section-label">Do Things</div>
-    <div class="fieldset">
-      <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io">
-        <img class="icon" src="/resources/icons/cydia.png">
-        <div>
-          <div>
-            <p>Add to Cydia</p>
-          </div>
+    <div class="panel">
+        <div id="block-title">
+            <p>Welcome to cj81499's Cydia Repo!</p>
         </div>
-      </a>
-      <a class="black-text">
-        <img class="icon" src="/resources/icons/url.png">
-        <div>
-          <div id="repo-url">
-            <p>URL</p>
-            <input type="text" value="https://cj81499.github.io" onclick="this.setSelectionRange(0, this.value.length);" readonly>
-          </div>
+        <div class="section-label">Do Things</div>
+        <div class="fieldset">
+            <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io/repo/">
+                <img class="icon" src="/resources/icons/cydia.png">
+                <div>
+                    <div>
+                        <p>Add to Cydia</p>
+                    </div>
+                </div>
+            </a>
+            <a class="black-text">
+                <img class="icon" src="/resources/icons/url.png">
+                <div>
+                    <div id="repo-url">
+                        <p>URL</p>
+                        <input type="text" value="https://cj81499.github.io/repo/" onclick="this.setSelectionRange(0, this.value.length);" readonly>
+                    </div>
+                </div>
+            </a>
         </div>
-      </a>
-    </div>
-    <div class="section-label">Thanks</div>
-    <div class="fieldset">
-      <div>
-        <div>
-          <p>
-            <a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Thanks!</p>
+        <div class="section-label">Thanks</div>
+        <div class="fieldset">
+            <div>
+                <div>
+                    <p>
+                        <a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Their
+                        repo is dead now, but thanks anyways!</p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </div>
 </body>
 
 </html>
