--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <title>cj Home</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"> -->
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
     <!-- Scripts -->
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
     <script src="/resources/js/navbars.js"></script>
 
     <!-- Favicons -->
@@ -28,15 +29,15 @@
 </head>
 
 <body id="home-page">
-    <section class="hero is-dark is-small">
+    <section class="hero is-primary is-small">
         <div class="hero-head">
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a class="navbar-item">
+                        <a href="/" class="navbar-item">
                             <img src="/resources/logo/32.png" alt="Logo">
                         </a>
-                        <span class="navbar-burger" data-target="mainNav">
+                        <span tabindex="0" class="navbar-burger" data-target="mainNav">
                             <span></span>
                             <span></span>
                             <span></span>
@@ -53,14 +54,6 @@
                             <a href="/contact.html" id="contact" class="navbar-item">
                                 Contact
                             </a>
-                            <span class="navbar-item">
-                                <a href="https://github.com/cj81499/cj81499.github.io" class="button is-dark is-inverted">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>Github</span>
-                                </a>
-                            </span>
                         </div>
                     </div>
                 </div>
@@ -69,7 +62,7 @@
         <div class="hero-body">
             <div class="container ">
                 <h1 class="title ">
-                    cj's Website
+                    You made it!
                 </h1>
                 <!-- <p class="subtitle ">
                     https://cj81499.github.io
@@ -80,18 +73,18 @@
     <section class="section">
         <div class="container">
             <div class="columns">
-                <div class="column">
-                    <div class="card">
+                <!-- <div class="column">
+                    <div class="card ">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Welcome!
+                                Welcome
                             </div>
                         </div>
                         <div class="card-content">
                             idk what to say
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <div class="column">
                     <div class="card">
                         <div class="card-header">
@@ -100,12 +93,12 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            moved to
+                            now located
                             <a href="/repo/">here</a>.
                         </div>
                     </div>
                 </div>
-                <div class="column">
+                <!-- <div class="column">
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
@@ -113,10 +106,10 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            Text
+                            this is a placeholder
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
