--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
     <title>cj Home</title>
 
     <!-- Stylesheets -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css"> -->
     <link rel="stylesheet" href="/assets/css/styles.css">
 
     <!-- Scripts -->
     <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
-    <script src="/resources/js/navbars.js"></script>
+    <script src="/assets/js/navbars.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
@@ -62,29 +61,29 @@
         <div class="hero-body">
             <div class="container ">
                 <h1 class="title ">
-                    You made it!
+                    Welcome
                 </h1>
-                <!-- <p class="subtitle ">
-                    https://cj81499.github.io
-                </p> -->
+                <p class="subtitle ">
+                    You made it!
+                </p>
             </div>
         </div>
     </section>
     <section class="section">
         <div class="container">
             <div class="columns">
-                <!-- <div class="column">
+                <div class="column">
                     <div class="card ">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Welcome
+                                Yo what's up
                             </div>
                         </div>
                         <div class="card-content">
                             idk what to say
                         </div>
                     </div>
-                </div> -->
+                </div>
                 <div class="column">
                     <div class="card">
                         <div class="card-header">
@@ -98,18 +97,21 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="column">
+                <div class="column">
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Hi
+                                Peep my cool logo
                             </div>
                         </div>
                         <div class="card-content">
+                            <div class="card-image">
+                                <img src="/resources/logo/1024.png" alt="cjLogo">
+                            </div>
                             this is a placeholder
                         </div>
                     </div>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
