--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
     <!-- Scripts -->
     <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
-    <script src="/resources/js/navbars.js"></script>
+    <script src="/assets/js/navbars.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
@@ -107,7 +107,7 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            <a href="https://twitter.com/cjMakesIcons">cjMakesIcons</a>
+                            <a href="https://twitter.com/cjMakesIcons">@cjMakesIcons</a>
                         </div>
                     </div>
                 </div>
