lkja;dhsfa;lkdfa;lkdsdas

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             <a href="/" id="home" class="navbar-item">
                                 Home
                             </a>
-                            <a href="/repo" id="repo" class="navbar-item">
+                            <a href="/repo/" id="repo/" class="navbar-item">
                                 Repo
                             </a>
                             <a href="/contact.html" id="contact" class="navbar-item">
@@ -93,7 +93,7 @@
                         </div>
                         <div class="card-content">
                             now located
-                            <a href="/repo">here</a>.
+                            <a href="/repo/">here</a>.
                         </div>
                     </div>
                 </div>
