--- a/repo/depictions/com.tokems.Glyphs/changelog.html
+++ b/repo/depictions/com.tokems.Glyphs/changelog.html
@@ -137,7 +137,7 @@
     <div class="fieldset">
       <div>
         <p>Winterboard Clock fixes (Requires
-          <a href="http://cydia.saurik.com/package/com.bensge.customclockicon" target="_new">Custom Clock Icon</a>)</p>
+          <a href="http://cydia.saurik.com/package/com.bensge.customclockicon/" target="_new">Custom Clock Icon</a>)</p>
       </div>
     </div>
     <div class="section-label">Version 1.7 (9/23/15)</div>
