--- a/repo/donate.html
+++ b/repo/donate.html
@@ -13,7 +13,7 @@
       return new Promise(resolve => setTimeout(resolve, ms));
     }
     sleep(5000).then(() => {
-      window.location.replace("https://www.paypal.me/cjMakesIcons")
+      window.location.replace("https://www.paypal.me/cjMakesIcons/")
     });
   </script>
 </head>
