--- a/repo/help.html
+++ b/repo/help.html
@@ -26,8 +26,8 @@
         <p>Winterboard:</p>
         <p>Enable "WB Patch" above all other themes (assuming the theme includes one)</p>
         <p>Install
-          <a href="https://cydia//package/com.bensge.customclockicon" target="_new">Custom Clock Icon</a> or
-          <a href="https://cydia//package/org.coolstar.customclock" target="_new">CustomClock</a> for the clock hands to be themed</p>
+          <a href="https://cydia//package/com.bensge.customclockicon/" target="_new">Custom Clock Icon</a> or
+          <a href="https://cydia//package/org.coolstar.customclock/" target="_new">CustomClock</a> for the clock hands to be themed</p>
         <p>Try Anemone instead</p>
       </div>
     </div>
