--- a/repo/index.html
+++ b/repo/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="section-label">Do Things</div>
         <div class="fieldset">
-            <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io/repo">
+            <a class="black-text" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://cj81499.github.io/repo/">
                 <img class="icon" src="/resources/icons/cydia.png">
                 <div>
                     <div>
@@ -44,7 +44,7 @@
                 <div>
                     <div id="repo-url">
                         <p>URL</p>
-                        <input type="text" value="https://cj81499.github.io/repo" onclick="this.setSelectionRange(0, this.value.length);" readonly>
+                        <input type="text" value="https://cj81499.github.io/repo/" onclick="this.setSelectionRange(0, this.value.length);" readonly>
                     </div>
                 </div>
             </a>
@@ -54,7 +54,7 @@
             <div>
                 <div>
                     <p>
-                        <a href="https://elijahandandrew.com" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Their
+                        <a href="https://elijahandandrew.com/" target="_new">Elijah and Andrew</a> were nice enough to let me base the way my repo looks off of theirs. Their
                         repo is dead now, but thanks anyways!</p>
                 </div>
             </div>
