--- a/repo/depictions/com.cj81499.PebbleStatus.OG/index.html
+++ b/repo/depictions/com.cj81499.PebbleStatus.OG/index.html
@@ -16,7 +16,7 @@
     <div class="fieldset">
       <div>
         <p>This theme was made by and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
         <p>Only works with @2x devices</p>
         <p>Also check out
           <a href="cydia://package/com.cj81499.PebbleStatus.Time" target="_new">Pebble Time PebbleStatus Theme</a>.</p>
