--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -17,15 +17,15 @@
       <div>
         <p>This theme was made by and is being hosted by cj81499.</p>
         <p>
-          <a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons">Reddit Post</a>
+          <a href="https://www.reddit.com/r/iOSthemes/comments/2r45jz/custom_glyphsgotham_icons/">Reddit Post</a>
         </p>
         <p>
           <a href="https://docs.google.com/document/d/1J-kl6YXp7kNIt1NaXjKfahUIaFV-T-N2SPfaSK5m4Ns/edit?pli=1"> Icon Requests</a>
         </p>
         <p>If you want to use the included icons for something, contact me and ask permission.</p>
         <p>If you post a setup using this pack, I appreciate being credited. I'm
-          <a href="https://www.reddit.com/user/cj81499">/u/cj81499</a> on Reddit and
-          <a href="https://twitter.com/cjMakesIcons">@cjMakesIcons</a> on Twitter.</p>
+          <a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a> on Reddit and
+          <a href="https://twitter.com/cjMakesIcons/">@cjMakesIcons</a> on Twitter.</p>
         <p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or
           becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the
           default.
