--- a/repo/depictions/com.tokems.Glyphs/index.html
+++ b/repo/depictions/com.tokems.Glyphs/index.html
@@ -16,9 +16,9 @@
     <div class="fieldset">
       <div>
         <p>This theme was made by tokems (
-          <a href="http://tokemsaurus.tumblr.com" target="_new">Blog</a> -
+          <a href="http://tokemsaurus.tumblr.com/" target="_new">Blog</a> -
           <a href="http://tokemsaurus.tumblr.com/info" target="_new">Other Places</a>) and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
         <p>The icon theme was taken from tokems' website, the control center was taken from hoenir's repo, and the theme was
           updated to work with iOS 8 by cj81499.</p>
         <p>A wallpaper for iPhone 5 or iPhone 6 is available at "Library/Themes/Glyphs - iOS 8.theme/Wallpaper".</p>
