--- a/repo/depictions/com.cj81499.cjGlyphs/index.html
+++ b/repo/depictions/com.cj81499.cjGlyphs/index.html
@@ -24,8 +24,8 @@
         </p>
         <p>If you want to use the included icons for something, contact me and ask permission.</p>
         <p>If you post a setup using this pack, I appreciate being credited. I'm
-          <a href="https://www.reddit.com/user/cj81499">/u/cj81499</a> on Reddit and
-          <a href="https://twitter.com/cjMakesIcons">@cjMakesIcons</a> on Twitter.</p>
+          <a href="https://www.reddit.com/user/cj81499/">/u/cj81499</a> on Reddit and
+          <a href="https://twitter.com/cjMakesIcons/">@cjMakesIcons</a> on Twitter.</p>
         <p>Alternate icons have "ALT" after the @2x. When I make another style for an icon, it either replaces the default or
           becomes an ALT. I don't include new ALTs in the changelog. Remove the ALT after the @2x to use it instead of the
           default.
@@ -79,7 +79,6 @@
       </a>
     </div>
   </div>
-  <script type="text/javascript" src="/resources/js/iosver.js"></script>
 </body>
 
 </html>
