--- a/repo/depictions/com.highdetalio.SpaceBlueBerry/index.html
+++ b/repo/depictions/com.highdetalio.SpaceBlueBerry/index.html
@@ -17,7 +17,7 @@
       <div>
         <p>This theme was made by highdetalio (
           <a href="https://twitter.com/highdetalio" target="_new">Twitter</a>). It was updated for iOS 8 and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
         <p>How to use with
           <a href="https://docs.google.com/document/d/16d1QZ9w4QeM28eYdrijGTWQkWJyUxUOMmxV4cHU25K8/edit?usp=sharing" target="_new">Anemone or Winterboard</a>
         </p>
@@ -71,7 +71,6 @@
       </a>
     </div>
   </div>
-  <script type="text/javascript" src="/resources/js/iosver.js"></script>
 </body>
 
 </html>
