--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@
     <title>cj Contact</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
     <!-- Scripts -->
-    <script src="/resources/js/navbars.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <script src="/assets/js/navbars.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
@@ -28,12 +28,12 @@
 </head>
 
 <body id="contact-page">
-    <section class="hero is-dark is-small">
+    <section class="hero is-primary is-small">
         <div class="hero-head">
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a class="navbar-item">
+                        <a href="/" class="navbar-item">
                             <img src="/resources/logo/32.png" alt="Logo">
                         </a>
                         <span class="navbar-burger" data-target="mainNav">
@@ -47,20 +47,12 @@
                             <a href="/" id="home" class="navbar-item">
                                 Home
                             </a>
-                            <a href="/repo/" id="repo" class="navbar-item">
+                            <a href="/repo/" id="repo/" class="navbar-item">
                                 Repo
                             </a>
                             <a href="/contact.html" id="contact" class="navbar-item">
                                 Contact
                             </a>
-                            <span class="navbar-item">
-                                <a href="https://github.com/cj81499/cj81499.github.io" class="button is-dark is-inverted">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>Github</span>
-                                </a>
-                            </span>
                         </div>
                     </div>
                 </div>
@@ -69,7 +61,7 @@
         <div class="hero-body">
             <div class="container ">
                 <h1 class="title ">
-                    Contact Me
+                    Let's Talk
                 </h1>
             </div>
         </div>
@@ -81,7 +73,9 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Email
+                                <span>
+                                    <i class="fas fa-envelope" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i> Email
+                                </span>
                             </div>
                         </div>
                         <div class="card-content">
@@ -93,7 +87,9 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Reddit
+                                <span>
+                                    <i class="fab fa-reddit"></i> Reddit
+                                </span>
                             </div>
                         </div>
                         <div class="card-content">
@@ -105,11 +101,27 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Twitter
+                                <span>
+                                    <i class="fab fa-twitter" data-fa-transform="shrink-6" data-fa-mask="fas fa-circle"></i> Twitter
+                                </span>
                             </div>
                         </div>
                         <div class="card-content">
-                            <a href="https://twitter.com/cjMakesIcons">cjMakesIcons</a>
+                            <a href="https://twitter.com/cjMakesIcons/">@cjMakesIcons</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="column">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="card-header-title">
+                                <span>
+                                    <i class="fab fa-github"></i> Github
+                                </span>
+                            </div>
+                        </div>
+                        <div class="card-content">
+                            <a href="https://github.com/cj81499/">cj81499</a>
                         </div>
                     </div>
                 </div>
