--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <title>cj Home</title>
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.1/css/bulma.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
 
     <!-- Scripts -->
-    <script src="/resources/js/navbars.js"></script>
+    <script src="https://use.fontawesome.com/releases/v5.0.13/js/all.js"></script>
+    <script src="/assets/js/navbars.js"></script>
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/resources/favicon/apple-touch-icon.png">
@@ -28,15 +28,15 @@
 </head>
 
 <body id="home-page">
-    <section class="hero is-dark is-small">
+    <section class="hero is-primary is-small">
         <div class="hero-head">
             <nav class="navbar">
                 <div class="container">
                     <div class="navbar-brand">
-                        <a class="navbar-item">
+                        <a href="/" class="navbar-item">
                             <img src="/resources/logo/32.png" alt="Logo">
                         </a>
-                        <span class="navbar-burger" data-target="mainNav">
+                        <span tabindex="0" class="navbar-burger" data-target="mainNav">
                             <span></span>
                             <span></span>
                             <span></span>
@@ -47,20 +47,12 @@
                             <a href="/" id="home" class="navbar-item">
                                 Home
                             </a>
-                            <a href="/repo/" id="repo" class="navbar-item">
+                            <a href="/repo/" id="repo/" class="navbar-item">
                                 Repo
                             </a>
                             <a href="/contact.html" id="contact" class="navbar-item">
                                 Contact
                             </a>
-                            <span class="navbar-item">
-                                <a href="https://github.com/cj81499/cj81499.github.io" class="button is-dark is-inverted">
-                                    <span class="icon">
-                                        <i class="fab fa-github"></i>
-                                    </span>
-                                    <span>Github</span>
-                                </a>
-                            </span>
                         </div>
                     </div>
                 </div>
@@ -69,11 +61,11 @@
         <div class="hero-body">
             <div class="container ">
                 <h1 class="title ">
-                    cj's Website
+                    Welcome
                 </h1>
-                <!-- <p class="subtitle ">
-                    https://cj81499.github.io
-                </p> -->
+                <p class="subtitle ">
+                    You made it!
+                </p>
             </div>
         </div>
     </section>
@@ -81,10 +73,10 @@
         <div class="container">
             <div class="columns">
                 <div class="column">
-                    <div class="card">
+                    <div class="card ">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Welcome!
+                                Yo what's up
                             </div>
                         </div>
                         <div class="card-content">
@@ -100,7 +92,7 @@
                             </div>
                         </div>
                         <div class="card-content">
-                            moved to
+                            now located
                             <a href="/repo/">here</a>.
                         </div>
                     </div>
@@ -109,11 +101,14 @@
                     <div class="card">
                         <div class="card-header">
                             <div class="card-header-title">
-                                Hi
+                                Peep my cool logo
                             </div>
                         </div>
                         <div class="card-content">
-                            Text
+                            <div class="card-image">
+                                <img src="/resources/logo/1024.png" alt="cjLogo">
+                            </div>
+                            this is a placeholder
                         </div>
                     </div>
                 </div>
