--- a/repo/depictions/com.jacopoiuytr.Mandolino/index.html
+++ b/repo/depictions/com.jacopoiuytr.Mandolino/index.html
@@ -18,7 +18,7 @@
         <p>This theme was made by jacopoiuytr (
           <a href="https://twitter.com/jacopoiuytr" target="_new">Twitter</a> -
           <a href="https://www.reddit.com/user/jacopoiuytr" target="_new">Reddit</a>) and is being hosted by cj81499 (
-          <a href="https://twitter.com/cjMakesIcons" target="_new">Twitter</a>).</p>
+          <a href="https://twitter.com/cjMakesIcons/" target="_new">Twitter</a>).</p>
         <p>The icon theme was taken from jacopoiuytr and was updated to work with iOS 8 by cj81499.</p>
         <p>How to use with
           <a href="https://docs.google.com/document/d/16d1QZ9w4QeM28eYdrijGTWQkWJyUxUOMmxV4cHU25K8/edit?usp=sharing" target="_new">Anemone or Winterboard</a>
@@ -72,7 +72,6 @@
       </a>
     </div>
   </div>
-  <script type="text/javascript" src="/resources/js/iosver.js"></script>
 </body>
 
 </html>
