--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a href="/" class="navbar-item">
-                            <img src="/assets/logo/32.png" alt="Logo">
+                            <img src="/assets/logo/cj.svg" width="28px" alt="Logo">
                         </a>
                         <span class="navbar-burger" data-target="mainNav">
                             <span></span>
