--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="container">
                     <div class="navbar-brand">
                         <a href="/" class="navbar-item">
-                            <img src="/assets/logo/32.png" alt="Logo">
+                            <img src="/assets/logo/cj.svg" width="28px" alt="Logo">
                         </a>
                         <span tabindex="0" class="navbar-burger" data-target="mainNav">
                             <span></span>
@@ -106,7 +106,7 @@
                         </div>
                         <div class="card-content">
                             <div class="card-image">
-                                <img src="/assets/logo/1024.png" alt="cjLogo">
+                                <img src="/assets/logo/cj.svg" width="100%" alt="cjLogo">
                             </div>
                             this is a placeholder
                         </div>
